# scalpy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: workflow.md
.claude/commands/: changelog.md  commit.md  pr.md
.github/workflows/: ci.yml  release.yml
changelogs/: v0.1.0.md
config/: .secrets.toml.sample  settings.toml
docs/: us-market-changes-20260519.md
docs/01-plan/features/: auto-screening.plan.md  dashboard.plan.md  scalpy-mvp.plan.md
docs/02-design/features/: auto-screening.design.md  dashboard.design.md  scalpy-mvp.design.md
docs/03-analysis/: auto-screening.analysis.md  scalpy-mvp.analysis.md
docs/04-report/: auto-screening.report.md  scalpy-mvp.report.md
docs/kis-api-guide/: auth.md  domestic-quotes.md  domestic-realtime.md  domestic-trading.md  한국투자증권_오픈API_전체문서_20260507_030000.xlsx
scripts/: check_us_balance.py  test_connection.py  test_order.py  test_premarket.py  test_screening.py  test_websocket.py
src/scalpy/: __init__.py  __main__.py  config.py  logging.py  main.py
src/scalpy/backtest/: cli.py  fetcher.py  quant_routes.py  quant_runner.py  routes.py  runner.py  schema.py
src/scalpy/broker/: __init__.py  base.py  kis.py  kis_overseas.py  mock.py
src/scalpy/core/: __init__.py  enums.py  exceptions.py  market.py  models.py  us_market.py
src/scalpy/dashboard/: __init__.py  app.py  routes.py  server.py  sse.py  state.py  us_routes.py
src/scalpy/dashboard/components/: performance.py  price_ticker.py  (+2 more)
src/scalpy/data/: __init__.py  ohlcv.py  repository.py  schema.py  simulator.py  stream.py  us_stream.py
src/scalpy/events/: __init__.py  bus.py
src/scalpy/notification/: __init__.py  telegram.py
src/scalpy/screening/: __init__.py  quant_screener.py  screener.py  us_screener.py
src/scalpy/static/: backtest.html  index.html  quant.html  quant_backtest.html  us_quant.html
src/scalpy/strategy/: __init__.py  base.py  bollinger.py  factor.py  ichimoku.py  ma_cross.py  mean_reversion.py  momentum.py  orderbook.py  registry.py  rsi.py  volume_spike.py  vwap.py
src/scalpy/trading/: engine.py  order.py  performance.py  position.py  risk.py
tests/: conftest.py  test_engine.py  test_integration.py  test_position.py  test_risk.py  test_screening.py  test_strategy.py
(+5 files in other folders)
