[project]
name = "scalpy"
version = "0.1.0"
description = "한국투자증권 Open API 기반 자동 스캘핑 트레이딩 봇"
requires-python = ">=3.12"
dependencies = [
    "pykis>=0.7.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "dynaconf>=3.2",
    "structlog>=24.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
    "testcontainers[postgres]>=4.0",
]

[project.scripts]
scalpy = "scalpy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scalpy"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["scalpy"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "pykis.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
